Prevent canvas elements from getting selected on iOS

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,3 +1,15 @@
+html,
+body {
+  margin: 0px;
+  overflow: hidden;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 sp-popover {
   --spectrum-popover-background-color: var(--spectrum-global-color-gray-200);
   --spectrum-overlay-animation-distance: 0px;
